force-app/main/default/objects/Unfunded_Trust__c/Unfunded_Trust__c.object-meta.xml
<CustomObject>
    <description>Tracks Unfunded Trusts (FNBO has bee notified that we are assigned to be associated with a trust but it has not yet been funded</description>
    <label>Unfunded Trust</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Unfunded Estate Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unfunded Trusts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>