force-app/main/default/objects/Unfunded_Trust__c/fields/Access_DB_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Access_DB_Customer_ID__c</fullName>
    <description>Customer ID from the Access database that previously housed the Unfunded Trust data.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer ID from the Access database that previously housed the Unfunded Trust data.</inlineHelpText>
    <label>Access DB Customer ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>