force-app/main/default/objects/Unfunded_Trust__c/fields/Accounting_Firm__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Unfunded Trusts</relationshipLabel>
    <relationshipName>Unfunded_Trusts</relationshipName>
    <type>Lookup</type>
</CustomField>