force-app/main/default/objects/Unfunded_Trust__c/fields/Additional_Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Contact City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>