force-app/main/default/objects/Unfunded_Trust__c/fields/Additional_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Contact Email</label>
    <type>Email</type>
</CustomField>