force-app/main/default/objects/Unfunded_Trust__c/fields/Additional_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Contact First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>