force-app/main/default/objects/Unfunded_Trust__c/fields/Additional_Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Contact State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>