force-app/main/default/objects/Unfunded_Trust__c/fields/Additional_Contact_Street__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Contact Street</label>
    <type>TextArea</type>
</CustomField>