force-app/main/default/objects/Unfunded_Trust__c/fields/Additional_Contact_Zip__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Contact Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>