force-app/main/default/objects/Unfunded_Trust__c/fields/Additional_Reason_Lost_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Reason_Lost_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Reason Lost</label>
    <type>TextArea</type>
</CustomField>