force-app/main/default/objects/Unfunded_Trust__c/fields/Assets_under_Management__c.field-meta.xml
<CustomField>
    <fullName>Assets_under_Management__c</fullName>
    <label>Assets under Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>