force-app/main/default/objects/Unfunded_Trust__c/fields/COI__c.field-meta.xml
<CustomField>
    <fullName>COI__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source COI</label>
    <referenceTo>COI__c</referenceTo>
    <relationshipLabel>Unfunded Trusts</relationshipLabel>
    <relationshipName>Unfunded_Trusts</relationshipName>
    <type>Lookup</type>
</CustomField>