force-app/main/default/objects/Unfunded_Trust__c/fields/Grantor_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Grantor_Billing_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grantor Billing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>