force-app/main/default/objects/Unfunded_Trust__c/fields/Grantor_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Grantor_Billing_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grantor Billing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>