force-app/main/default/objects/Unfunded_Trust__c/fields/Grantor_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Grantor_Billing_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grantor Billing Street</label>
    <type>TextArea</type>
</CustomField>