force-app/main/default/objects/Unfunded_Trust__c/fields/Grantor_Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Grantor_Billing_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grantor Billing Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>