force-app/main/default/objects/Unfunded_Trust__c/fields/Grantor_Email__c.field-meta.xml
<CustomField>
    <fullName>Grantor_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grantor Email</label>
    <type>Email</type>
</CustomField>