force-app/main/default/objects/Unfunded_Trust__c/fields/Grantor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Grantor_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grantor First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>