force-app/main/default/objects/Unfunded_Trust__c/fields/Grantor_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Grantor_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grantor Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>