force-app/main/default/objects/Unfunded_Trust__c/fields/Grantor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Grantor_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grantor Phone</label>
    <type>Phone</type>
</CustomField>