force-app/main/default/objects/Unfunded_Trust__c/fields/Legal_Firm__c.field-meta.xml
<CustomField>
    <fullName>Legal_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Unfunded Trusts</relationshipLabel>
    <relationshipName>Unfunded_Trusts1</relationshipName>
    <type>Lookup</type>
</CustomField>