force-app/main/default/objects/Unfunded_Trust__c/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fees</fullName>
            </value>
            <value>
                <fullName>Legal/Compliance/Documentation</fullName>
            </value>
            <value>
                <fullName>Prospect elected to maintain current relationship</fullName>
            </value>
            <value>
                <fullName>Removal</fullName>
            </value>
            <value>
                <fullName>Declination</fullName>
            </value>
            <value>
                <fullName>Small Trust/Uneconomical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>