force-app/main/default/objects/Unfunded_Trust__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Funded = We are named as fiduciary and chose to serve
Inactive = We are not named as fiduciary or chosen not to serve
Active = Everything else</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>