force-app/main/default/objects/Unfunded_Trust__c/validationRules/Active_Reason_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Reason_Lost</fullName>
    <active>true</active>
    <description>The the Unfunded Trust is active, it cannot have a Reason Lost populated</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Status__c, &quot;Active&quot;), 
Not(ISBLANK(text( Reason_Lost__c ))) 
)</errorConditionFormula>
    <errorMessage>An Active Unfunded Trust cannot have a Reason Lost populated</errorMessage>
</ValidationRule>