force-app/main/default/objects/Unfunded_Trust__c/validationRules/Additional_Reason_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Additional_Reason_Lost</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL(Status__c, &quot;Inactive&quot;), 
ISBLANK(Additional_Reason_Lost_Information__c) 
)</errorConditionFormula>
    <errorDisplayField>Additional_Reason_Lost_Information__c</errorDisplayField>
    <errorMessage>The &quot;Additional Reason Lost&quot; field is required to be completed when the &quot;Status&quot; field is set to &quot;Inactive&quot;.</errorMessage>
</ValidationRule>