force-app/main/default/objects/Unfunded_Trust__c/validationRules/Reason_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Lost</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL(Status__c, &quot;Inactive&quot;), 
ISBLANK(TEXT(Reason_Lost__c))
)</errorConditionFormula>
    <errorDisplayField>Reason_Lost__c</errorDisplayField>
    <errorMessage>The &quot;Reason Lost&quot; field is required to be completed when the &quot;Status&quot; field is set to &quot;Inactive&quot;.</errorMessage>
</ValidationRule>